# rendercaption

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  test_perf.py
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: EngineSettingsPanel.tsx  ExportManager.tsx  ModelManager.tsx  TelemetryConsole.tsx  TimelineSegment.tsx
src/utils/: exportFormatters.ts  logger.ts
