[package]
name = "rendercaption"
version = "0.1.0"
description = "RenderCaption - Offline AI Speech to Text & Subtitle Generator"
authors = ["you"]
edition = "2021"
repository = "https://github.com/AnshSinglaDev/rendercaption"
keywords = ["subtitles", "captions", "speech-to-text", "gguf", "offline", "free", "open-source", "foss", "whisper", "auto-subs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rendercaption_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-shell = "2"
hound = "3.5"
futures = "0.3.32"
tokio = { version = "1", features = ["time"] }
tauri-plugin-fs = "2.5.1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
sha2 = "0.11.0"
hex = "0.4.3"
sysinfo = "0.33.0"
